--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,11 +1,13 @@
-@import "../../../../assets/styles/variables";
+@import "../../../assets/styles/variables";
 
 .footer {
-  height: 40px;
   background-color: #24292e;
   text-align: center;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
   p {
-    line-height: 40px;
-    @include text-mixin(#fff, 1.4vw, $font-gotham-pro-regular);
+    line-height: 10px;
+    @include text-mixin(#fff, 10px, $font-gotham-pro-regular);
   }
 }
