--- a/src/app/components/commits-page/commits-page.component.html
+++ b/src/app/components/commits-page/commits-page.component.html
@@ -1,15 +1,13 @@
-<app-header></app-header>
 <section class="repo-page commit-page">
   <div class="wrap">
     <div class="repo-page__card">
       <p>Cписок коммитов:</p>
       <ul *ngIf="commits && commits.length">
         <li *ngFor="let commit of commits">
-          <a href="{{commit.html_url}}" target="_blank">{{commit.sha}}</a>
+          <a href="{{commit.link}}" target="_blank">{{commit.name}}</a>
         </li>
       </ul>
       <img src="/assets/images/github-512.png" />
     </div>
   </div>
 </section>
-<app-footer></app-footer>
